--- a/style.css
+++ b/style.css
@@ -140,19 +140,25 @@ nav{
 }
 .blog-cards{
   display: flex;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  /* align-items: center;
-  justify-content: space-around; */
+  justify-content: space-evenly;
+  align-items: center;
+  
 }
 /* Responsive */
-
+@media (max-width:960px){
+.blog-cards{
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+}
+}
 @media (max-width:540px){
   .blog-card{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
 
